# lantana

./: .ansible-lint  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  TODO.md
pipeline/: pyproject.toml  uv.toml
pipeline/src/lantana/: prune.py
pipeline/src/lantana/common/: config.py  datalake.py  redact.py
pipeline/src/lantana/dashboard/: app.py
pipeline/src/lantana/dashboard/pages/: credentials.py  findings.py  geography.py  ip_reputation.py  overview.py  progression.py  stix_export.py
pipeline/src/lantana/enrichment/: ioc.py  runner.py
pipeline/src/lantana/intel/: iocs.py  stix.py
pipeline/src/lantana/models/: normalize.py  ocsf.py  schema.py
pipeline/src/lantana/notify/: alerts.py  cli.py  discord.py  explanations.py  report.py  timing.py
pipeline/src/lantana/transform/: metrics.py  runner.py
pipeline/tests/: conftest.py  test_integration.py  test_integration_production_shape.py  test_prune.py
pipeline/tests/test_common/: test_config.py  test_datalake.py  test_redact.py
pipeline/tests/test_enrichment/: test_abuseipdb.py  test_greynoise.py  test_ioc.py  test_phishstats.py  test_runner.py  test_shodan.py  test_virustotal.py
pipeline/tests/test_intel/: test_iocs.py  test_stix.py
pipeline/tests/test_models/: test_normalize.py  test_ocsf.py  test_schema.py
pipeline/tests/test_notify/: test_alerts.py  test_cli.py  test_discord.py  test_explanations.py  test_report.py  test_timing.py
pipeline/tests/test_transform/: test_metrics.py  test_runner.py
(+156 files in other folders)
