[project]
name = "lantana-pipeline"
version = "0.1.0"
description = "Lantana honeypot data enrichment, analysis, and intelligence pipeline"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
    "streamlit>=1.40",
    "pydantic>=2.0",
    "tenacity>=9.0",
    "structlog>=24.0",
    "stix2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.scripts]
lantana-enrich = "lantana.enrichment.runner:main"
lantana-transform = "lantana.transform.runner:main"
lantana-prune = "lantana.prune:main"
lantana-notify = "lantana.notify.cli:main"
lantana-report = "lantana.notify.discord:generate_and_send"
lantana-dashboard = "lantana.dashboard.app:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/lantana"]
